# sqlite3-cmake

./: .cmake-format.py  .gitignore  CMakeLists.txt  README.md  README_zh.md  build-history.json
.github/workflows/: auto-build.yml  build.yml
cmake/: ProjectIsTopLevel.cmake  sqlite3-config.cmake.in
